Revert "Use built-in phpunit for PHP 5.* Composer is locked to PHP 5.6, so it will install incompatible versions"
This reverts commit 636e6ccc804c67a00ab2c71e8526f0ae37b0b5cb.

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,10 +57,7 @@ before_script:
  - ../vendor/bin/phpunit --version
 
 script:
- - if [[ $(phpenv version-name:0:1) == "5" ]];
-   then phpunit --coverage-clover clover.xml;
-   else ../vendor/bin/phpunit --coverage-clover clover.xml;
-   fi
+ - ../vendor/bin/phpunit --coverage-clover clover.xml
 
 after_script:
  - utils/proxy/stop.sh
