Revert "Lock PHPUnit version with composer.json #282"
This reverts commit f8f045e2cdb95a80ef61eb13e9665e380d6ad34b.

--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
 		"php": ">=5.2"
 	},
 	"require-dev": {
-		"requests/test-server": "dev-master",
-		"phpunit/phpunit": "^6.0"
+		"requests/test-server": "dev-master"
 	},
 	"type": "library",
 	"autoload": {
