--- a/.travis.yml
+++ b/.travis.yml
@@ -3,26 +3,18 @@ language: php
 matrix:
   fast_finish: true
   include:
-   - php: 5.2
-     dist: precise
-     env: COMPOSER_PHPUNIT=false
-   - php: 5.3
-     dist: precise
-     env: COMPOSER_PHPUNIT=false
-   - php: 5.4
-     env: COMPOSER_PHPUNIT=false
-   - php: 5.5
-     env: COMPOSER_PHPUNIT=false
-   - php: 5.6
-     env: TEST_COVERAGE=1 COMPOSER_PHPUNIT=true
-   - php: 7.0
-     env: COMPOSER_PHPUNIT=true
-   - php: 7.1
-     env: COMPOSER_PHPUNIT=true
-   - php: 7.2
-     env: COMPOSER_PHPUNIT=true
-   - php: nightly
-     env: COMPOSER_PHPUNIT=true
+    - php: 5.2
+      dist: precise
+    - php: 5.3
+      dist: precise
+    - php: 5.4
+    - php: 5.5
+    - php: 5.6
+      env: TEST_COVERAGE=1
+    - php: 7.0
+    - php: 7.1
+    - php: 7.2
+    - php: nightly
 
 allow_failures:
   - php: nightly
@@ -38,7 +30,6 @@ cache:
 install:
  # Setup the test server
  - phpenv local $( phpenv versions | grep 5.6 | tail -1 )
- - if [ "$COMPOSER_PHPUNIT" == 'false' ]; then composer remove phpunit/phpunit --dev; fi
  - composer install --dev --no-interaction
  - TESTPHPBIN=$(phpenv which php)
  - phpenv local --unset
@@ -63,10 +54,11 @@ before_script:
  - curl -s -I http://requests-php-tests.herokuapp.com/ > /dev/null
  
  # Environment checks
- - if [ "$COMPOSER_PHPUNIT" == 'false' ]; then phpunit --version; else ../vendor/bin/phpunit --version; fi
+ - ../vendor/bin/phpunit --version
 
 script:
- - if [ "$COMPOSER_PHPUNIT" == 'false' ]; then phpunit --coverage-clover clover.xml;
+ - if [[ $(phpenv version-name:0:1) == "5" ]];
+   then phpunit --coverage-clover clover.xml;
    else ../vendor/bin/phpunit --coverage-clover clover.xml;
    fi
 
